add instances log & delete & replicas(scale) api
