# rock-platform/rock/docs/swagger.yaml
@@ -650,7 +650,7 @@ definitions:
         example: '********'
         type: string
       role_id:
-        description: RoleId   *RoleIdReq `json:"role_id" binding:"required"`  // 用顺义的这种定义，ctx.ShouldBind报错
+        description: RoleId   *RoleIdReq `json:"role_id" binding:"required"`  // xorm可以用这种方式定义，但gorm则会ctx.ShouldBind报错
         example: 1
         type: integer
     required:
@@ -967,6 +967,13 @@ definitions:
     required:
     - namespace
     - pods
+    type: object
+  v1.InstanceScaleResp:
+    properties:
+      number:
+        description: replicas number
+        example: 1
+        type: integer
     type: object
   v1.LoginUserInfo:
     properties:
@@ -3188,6 +3195,38 @@ paths:
       tags:
       - INSTANCE
   /v1/instances/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Api to delete instance by instance id
+      parameters:
+      - description: Instance ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: StatusOK
+          schema:
+            $ref: '#/definitions/v1.InstanceScaleResp'
+        "400":
+          description: StatusBadRequest
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "404":
+          description: StatusNotFound
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "500":
+          description: StatusInternalServerError
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+      summary: Delete instance by instance id
+      tags:
+      - INSTANCE
     get:
       consumes:
       - application/json
@@ -3302,6 +3341,49 @@ paths:
       summary: Get instance's relevant deployments by instance id
       tags:
       - INSTANCE
+  /v1/instances/{id}/logfile:
+    get:
+      consumes:
+      - application/json
+      description: Api to get instance's log file by instance id
+      parameters:
+      - description: Instance ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Instance's pod name
+        in: query
+        name: pod
+        required: true
+        type: string
+      - description: Pod's container name
+        in: query
+        name: container
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: StatusOK
+          schema:
+            type: string
+        "400":
+          description: StatusBadRequest
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "404":
+          description: StatusNotFound
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "500":
+          description: StatusInternalServerError
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+      summary: Get instance's log file by instance id
+      tags:
+      - INSTANCE
   /v1/instances/{id}/logs:
     get:
       consumes:
@@ -3381,6 +3463,71 @@ paths:
           schema:
             $ref: '#/definitions/utils.HTTPError'
       summary: Get instance's pods name by instance id
+      tags:
+      - INSTANCE
+  /v1/instances/{id}/scale:
+    get:
+      consumes:
+      - application/json
+      description: Api to get instance's scale number by instance id
+      parameters:
+      - description: Instance ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: StatusOK
+          schema:
+            $ref: '#/definitions/v1.InstanceScaleResp'
+        "400":
+          description: StatusBadRequest
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "404":
+          description: StatusNotFound
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "500":
+          description: StatusInternalServerError
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+      summary: Get instance's scale number by instance id
+      tags:
+      - INSTANCE
+    put:
+      consumes:
+      - application/json
+      description: Api to update instance's scale number by instance id
+      parameters:
+      - description: Instance ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: StatusOK
+          schema:
+            $ref: '#/definitions/v1.InstanceScaleResp'
+        "400":
+          description: StatusBadRequest
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "404":
+          description: StatusNotFound
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "500":
+          description: StatusInternalServerError
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+      summary: Update instance's scale number by instance id
       tags:
       - INSTANCE
   /v1/nodes:
